Fix timestamp width (text overflow issue)

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@
   margin-right: 20px;
   margin-left: 20px;
   color: gray;
+  min-width: 45px;
 }
 
 .userfield {
